# pcocr

./: .gitignore  README.md  pyproject.toml  server.py
src/pcocr/: main.py
src/pcocr/api/: ocr.py
src/pcocr/services/: ocr_service.py
src/pcocr/utils/: img.py
tests/: services_test.py
